Extension methods,helper methods for common functionalities

--- a/WebApplication3/Views/Home/PartialViewContainer.cshtml
+++ b/WebApplication3/Views/Home/PartialViewContainer.cshtml
@@ -1,4 +1,5 @@
 ﻿@model IEnumerable<WebApplication3.Models.Student>
+@using WebApplication3.Extension
 
 <p>
     @Html.ActionLink("Create New", "Create")
@@ -26,6 +27,12 @@
         <th>
             @Html.DisplayNameFor(model => model.Age)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Amount)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Amount)
+        </th>
     </tr>
 
     @foreach (var item in Model)
@@ -36,6 +43,12 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Age)
+            </td>
+            <td>
+                @item.Amount.ConvertToDollar()
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Amount)
             </td>
         </tr>
     }
