--- a/WebApplication3/Views/Shared/_SideBar.cshtml
+++ b/WebApplication3/Views/Shared/_SideBar.cshtml
@@ -1,1 +1,38 @@
 ﻿
+@*<ul style="list-style-type:none;">
+    <li class="">
+        <a href="@Url.Action("Resume", "Home")" class="btn btn-block">My Resume </a>
+    </li>
+    <li class="setBtnMargin">
+        <a href="@Url.Action("CoverLetter", "Home")" class="btn btn-block">My Cover Letter </a>
+    </li>
+    <li class="setBtnMargin">
+        <a href="@Url.Action("Account", "Home")" class="btn btn-block">My Account </a>
+
+    </li>
+    <li class="setBtnMargin">
+        <a href="@Url.Action("Rewards", "Home")" class="btn btn-block">Get Rewards </a>
+    </li>
+</ul>*@
+
+@{
+    string pageUrl = Request.Url.PathAndQuery.ToString();
+    <script>alert(@pageUrl)</script>
+    var s = 2;
+}
+    <ul style="list-style-type:none;">
+        <li class="@(pageUrl.ToLower().Contains("/home/resume") ? "active" : string.Empty) setBtnMargin">
+            <a href="@Url.Action("Resume", "Home")" class="btn btn-block">My Resume </a>
+        </li>
+        <li class="@(pageUrl.ToLower().Contains("/home/coverletter") ? "active" : string.Empty) setBtnMargin">
+            <a href="@Url.Action("CoverLetter", "Home")" class="btn btn-block">My Cover Letter </a>
+        </li>
+        <li class="@(pageUrl.ToLower().Contains("/home/account") ? "active" : string.Empty) setBtnMargin">
+            <a href="@Url.Action("Account", "Home")" class="btn btn-block">My Account </a>
+        </li>
+        <li class="@(pageUrl.ToLower().Contains("/home/rewards") ? "active" : string.Empty) setBtnMargin">
+            <a href="@Url.Action("Rewards", "Home")" class="btn  btn-block">Get Rewards </a>
+        </li>
+    </ul>
+
+
