--- a/WebApplication3/Views/Shared/_SideBar.cshtml
+++ b/WebApplication3/Views/Shared/_SideBar.cshtml
@@ -17,7 +17,7 @@
 @* User will now now which tab is currently selected *@
 @{
     string pageUrl = Request.Url.PathAndQuery.ToString();
-    <script>alert(@pageUrl)</script>
+    <script></script>
     var s = 2;
 }
     <ul style="list-style-type:none;">
