--- a/WebApplication3/Views/CoverLetter/Create.cshtml
+++ b/WebApplication3/Views/CoverLetter/Create.cshtml
@@ -20,10 +20,17 @@
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.FirstName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.TextBoxFor(m => m.Name)
-                @Html.ValidationMessageFor(model => model.Name, "*", new { @class = "text-danger" })
+                @Html.TextBoxFor(m => m.FirstName)
+                @Html.ValidationMessageFor(model => model.FirstName, "*", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.LastName, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.TextBoxFor(m => m.LastName)
+                @Html.ValidationMessageFor(model => model.LastName, "*", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
@@ -32,5 +39,12 @@
             </div>
         </div>
     </div>
+}
+
+@section scripts
+{
+    @Scripts.Render("~/bundles/jqueryval") 
+<script src="~/Scripts/mvcfoolproof.unobtrusive.js"></script>
+
 }
 
