--- a/WebApplication3/Views/CoverLetter/Create.cshtml
+++ b/WebApplication3/Views/CoverLetter/Create.cshtml
@@ -33,6 +33,20 @@
                 @Html.ValidationMessageFor(model => model.LastName, "*", new { @class = "text-danger" })
             </div>
         </div>
+
+        @Html.RadioButton("SearchBy", "Name", true) <text> Name </text>
+        @Html.RadioButton("SearchBy", "Location") <text> Location</text>
+
+
+        <label>
+            @Html.RadioButtonFor(m => m.SelectedRoleType, "JobSeeker", new { @class = "js-radio", id = "" })
+            <span>Job Seeker</span>
+        </label>
+
+        <label>
+            @Html.RadioButtonFor(m => m.SelectedRoleType, "Referrer", new { @class = "js-radio", id = "" })
+            <span>Referrer</span>
+        </label>
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-default" />
