--- a/WebApplication3/Views/ManagerWorker/Create.cshtml
+++ b/WebApplication3/Views/ManagerWorker/Create.cshtml
@@ -52,6 +52,13 @@
                 @Html.ValidationMessageFor(model => model.ManagerId, "", new { @class = "text-danger" })
             </div>
         </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.nodefaultbutmanadatory, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.nodefaultbutmanadatory, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.nodefaultbutmanadatory, "", new { @class = "text-danger" })
+            </div>
+        </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
