--- a/WebApplication3/Views/DropDown/Index.cshtml
+++ b/WebApplication3/Views/DropDown/Index.cshtml
@@ -26,11 +26,19 @@
             <dd>
                 @Html.DisplayFor(m => m.Name)
             </dd>
+
             <dt>
                 @Html.DisplayNameFor(m => m.RateInDollar)
             </dt>
             <dd>
                 @Html.DisplayFor(m => m.RateInDollar)
+            </dd>
+
+            <dt>
+                @Html.DisplayNameFor(m => m.concatString)
+            </dt>
+            <dd>
+                @Html.DisplayFor(m => m.concatString)
             </dd>
         </dl>
         <p style="display:none">@Model.test</p>
