--- a/WebApplication3/Views/Shared/_Layout.cshtml
+++ b/WebApplication3/Views/Shared/_Layout.cshtml
@@ -2,12 +2,14 @@
 <html>
 <head>
     <meta charset="utf-8" />
+    @* viewport represents the actual screen size that is visible to the user on the screen, below configuration is important for proper page
+        rendering *@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-  
+
 </head>
 @Scripts.Render("~/bundles/jquery")
 
