RWD Max Width Images should not go out of parent div

--- a/WebApplication3/Views/Shared/_Layout.cshtml
+++ b/WebApplication3/Views/Shared/_Layout.cshtml
@@ -12,9 +12,13 @@
 
 </head>
 @Scripts.Render("~/bundles/jquery")
-
+@*to make sure image does not go out of parent div add img {max-width:100%}  *@
 
 <body>
+    <div>
+        <img src="~/Content/1280px-Klagenfurt_Altes_Rathaus_03.jpg" />
+        hello
+    </div>
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
