--- a/WebApplication3/Views/Form/Create.cshtml
+++ b/WebApplication3/Views/Form/Create.cshtml
@@ -36,6 +36,15 @@
         </div>
 
         <div class="form-group">
+            @Html.LabelFor(model => model.amount, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.amount, new { htmlAttributes = new { @class = "form-control" } })
+                @*star meaning show the star sign to keep show field required.  *@
+                @Html.ValidationMessageFor(model => model.amount)
+            </div>
+        </div>
+
+        <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
