--- a/WebApplication3/Views/City/List.cshtml
+++ b/WebApplication3/Views/City/List.cshtml
@@ -102,20 +102,19 @@
     $(document).ready(function () {
         $("#cities .js-delete").on("click", function () {
             var button = $(this);
-
-            if(confirm("are you sure you want to delete?"))
-            {
-                $.ajax({
-                    url: "/api/cities/" + $(this).attr("data-city-id"),
-                    method: "DELETE",
-                    success: function () {
-                        button.parents("tr").remove();
-                    }
-
-                })
-            }
-
-        })
+            bootbox.confirm("Are you sure you want to delete?", function (result) {
+                if (result) {
+                    debugger;
+                    $.ajax({
+                        url: "/api/cities/" + button.attr("data-city-id"),
+                        method: "DELETE",
+                        success: function () {
+                            button.parents("tr").remove();
+                        }
+                    });
+                }
+            });
+        });
     });
 
 </script>
