--- a/WebApplication3/Views/Account/Register.cshtml
+++ b/WebApplication3/Views/Account/Register.cshtml
@@ -31,12 +31,12 @@
     </div>
 
     <!--Select the Role Type for the User-->
-    <div class="form-group">
+    @*<div class="form-group">
         @Html.Label("Select Your User Type", new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
             @Html.DropDownList("Name")
         </div>
-    </div>
+    </div>*@
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" class="btn btn-default" value="Register" />
