Added toaster notification awesome

--- a/WebApplication3/Views/City/New.cshtml
+++ b/WebApplication3/Views/City/New.cshtml
@@ -55,8 +55,8 @@
                 data: vm
 
             })
-            .done(function () { alert("done"); })
-.fail(function () { alert("fail"); })
+            .done(function () { toastr.success("Rentals!!"); })
+.fail(function () { toastr.error("Rentals!!"); })
         });
 
 
